# RVWeb

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  RVWeb.cpp  RVWeb.sln  RVWeb.vcxproj  RVWeb.vcxproj.filters  ZERO_CHECK.proj  ZERO_CHECK.proj.filters  cmake_install.cmake  foo.cpp
RVWeb.dir/Debug/: RVWeb.exe.recipe  RVWeb.ilk
RVWeb.dir/Debug/RVWeb.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  RVWeb.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: AbstractCurve.hpp  CSVParser.cpp  CSVParser.h  CSVParser.hpp  Clustering.cpp  Clustering.hpp  Dimension.hpp  FeatureVector.hpp  IJKKEY.cpp  IJKKey.cpp  IJKKey.hpp  IJKModel.py  Metadata.cpp  Metadata.hpp  Pixelization.cpp  Pixelization.hpp  Property.cpp  Property.hpp  Property.py  RVConfig.cpp  RVConfig.hpp  RVConfig.py  SnakeCurve.cpp  SnakeCurve.hpp  Strategy.cpp  Strategy.hpp  Well.cpp  Well.hpp  WellList.cpp  WellList.hpp  WellList.py  foo.cpp  main.cpp  main.py
src/Curves/: AbstractCurve.hpp  SnakeCurve.cpp  SnakeCurve.hpp
src/Plugin/: setup.py
src/Plugin/examples/: boilerplate_example.yaml  final.csv
src/Plugin/webviz_plugin_boilerplate/plugins/: _some_custom_plugin.py
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
xmlParser/: PX_PH_config.xml  pugiconfig.hpp  pugixml.cpp  pugixml.hpp
